[firefox-webextensions] popupでのキーイベントのハンドリング確認(Firefoxのバグで動かず)

--- a/firefox-webextensions/open-popup/manifest.json
+++ b/firefox-webextensions/open-popup/manifest.json
@@ -8,7 +8,12 @@
     "32": "icons/icon32.png"
   },
 
+  "background": {
+    "scripts": ["background.js"]
+  },
+
   "permissions": [
+    "tabs", "activeTab"
   ],  
 
   "browser_action": {
