hubotの設定を追加

--- a/rocket-chat/ansible/roles/rocket-chat/tasks/main.yml
+++ b/rocket-chat/ansible/roles/rocket-chat/tasks/main.yml
@@ -4,6 +4,9 @@
 - name: Pull Rocket Chat image
   shell: docker pull rocketchat/rocket.chat
 
+- name: Pull Hubot image
+  shell: docker pull rocketchat/hubot-rocketchat
+
 - name: Create application directory
   file: path={{ item }} state=directory
   with_items:
