--- a/rocket-chat/ansible/roles/rocket-chat/files/docker-compose.yml
+++ b/rocket-chat/ansible/roles/rocket-chat/files/docker-compose.yml
@@ -17,3 +17,18 @@ rocketchat:
   ports:
     - 3000:3000
   restart: always
+
+hubot:
+  image: rocketchat/hubot-rocketchat:latest
+  environment:
+    - ROCKETCHAT_URL=rocketchat:3000
+    - ROCKETCHAT_ROOM=general
+    - ROCKETCHAT_USER=hubot
+    - ROCKETCHAT_PASSWORD=hubot
+    - BOT_NAME=hubot
+    - HUBOT_RSS_INTERVAL=60
+    - EXTERNAL_SCRIPTS=hubot-help,hubot-seen,hubot-diagnostics,hubot-rss-reader
+  links:
+    - rocketchat:rocketchat
+  ports:
+    - 3001:8080
