--- a/rocket-chat/ansible/roles/rocket-chat/files/docker-compose.yml
+++ b/rocket-chat/ansible/roles/rocket-chat/files/docker-compose.yml
@@ -1,3 +1,5 @@
+# https://rocket.chat/docs/installation/docker-containers/
+
 db:
   image: mongo:latest
   volumes:
@@ -20,6 +22,8 @@ rocketchat:
 
 hubot:
   image: rocketchat/hubot-rocketchat:latest
+  volumes:
+    - ./scripts:/home/hubot/scripts
   environment:
     - ROCKETCHAT_URL=rocketchat:3000
     - ROCKETCHAT_ROOM=general
