--- a/rocket-chat/ansible/roles/rocket-chat/tasks/main.yml
+++ b/rocket-chat/ansible/roles/rocket-chat/tasks/main.yml
@@ -12,6 +12,7 @@
   with_items:
     - /opt/rocket.chat/data/runtime/db
     - /opt/rocket.chat/data/dump
+    - /opt/rocket.chat/scripts
 
 - name: Copy docker-compose.yml
   copy: src=docker-compose.yml dest=/opt/rocket.chat/docker-compose.yml
