[flyway-schemaspy] 構成変更(PostgreSQLだけVagrantで実行)

--- a/flyway-schemaspy/flyway/conf/flyway.conf
+++ b/flyway-schemaspy/flyway/conf/flyway.conf
@@ -1,4 +1,4 @@
-flyway.url=jdbc:postgresql://localhost:5432/testdb
+flyway.url=jdbc:postgresql://192.168.33.10:5432/testdb
 flyway.user=user1
 flyway.password=pass1
 flyway.locations=filesystem:./sql
