--- a/flyway-schemaspy/schemaspy/schemaspy.properties
+++ b/flyway-schemaspy/schemaspy/schemaspy.properties
@@ -1,6 +1,6 @@
 schemaspy.t=pgsql
 schemaspy.dp=postgresql-42.2.23.jar
-schemaspy.host=localhost
+schemaspy.host=192.168.33.10
 schemaspy.port=5432
 schemaspy.db=testdb
 schemaspy.u=user1
