[flyway-schemaspy] driverの指定方法が誤っていたので修正

--- a/flyway-schemaspy/schemaspy/schemaspy.properties
+++ b/flyway-schemaspy/schemaspy/schemaspy.properties
@@ -1,5 +1,5 @@
 schemaspy.t=pgsql11
-schemaspy.dp=postgresql-42.2.23.jar
+schemaspy.dp=drivers
 schemaspy.host=192.168.33.10
 schemaspy.port=5432
 schemaspy.db=testdb
