[postgresql/sample-database] サンプルとなるデータベースのリストア処理をAnsibleに組み込み
下記のサンプルデータベースを利用

* https://www.postgresqltutorial.com/postgresql-getting-started/postgresql-sample-database/

--- a/postgresql/sample-database/ansible/playbook.yml
+++ b/postgresql/sample-database/ansible/playbook.yml
@@ -3,3 +3,15 @@
     - ./vars.yml
   roles:
     - postgresql
+  tasks:
+    - name: Copy dump
+      copy: 
+        src: '{{ playbook_dir }}/dvdrental.tar'
+        dest: /tmp
+    - name: Restore
+      become: yes
+      become_user: '{{ postgresql_admin_user }}'
+      postgresql_db:
+        state: restore
+        name: dvdrental
+        target: /tmp/dvdrental.tar
