--- a/rocket-chat/Vagrantfile
+++ b/rocket-chat/Vagrantfile
@@ -1,12 +1,16 @@
 Vagrant.configure(2) do |config|
-  config.vm.box = "bento/centos-7.9"
+  config.vm.box = "bento/ubuntu-22.04"
   config.vm.network "private_network", ip: "192.168.33.11"
-  config.vm.synced_folder ".", "/vagrant", create: true, mount_options: ['dmode=777','fmode=666']
+  config.vm.provider "virtualbox" do |vb|
+    vb.memory = "2048"
+  end
   config.vm.provision "shell", inline: <<-SHELL
-    yum install -y epel-release
-    yum install -y ansible
+    sudo apt update
+    sudo apt install -y software-properties-common
+    sudo apt-add-repository --yes --update ppa:ansible/ansible
+    sudo apt install -y ansible
 
     cd /vagrant/ansible
-    ansible-playbook -i hosts playbook.yml
+    sudo ansible-playbook -i hosts playbook.yml
   SHELL
 end
