--- a/schemaspy-postgis/.devcontainer/Dockerfile
+++ b/schemaspy-postgis/.devcontainer/Dockerfile
@@ -15,3 +15,9 @@ RUN if [ "${INSTALL_MAVEN}" = "true" ]; then su vscode -c "umask 0002 && . /usr/
 
 # [Optional] Uncomment this line to install global node packages.
 # RUN su vscode -c "source /usr/local/share/nvm/nvm.sh && npm install -g <your-package-here>" 2>&1
+
+# Flywayのインストール
+RUN wget -qO- https://download.red-gate.com/maven/release/com/redgate/flyway/flyway-commandline/10.20.1/flyway-commandline-10.20.1-linux-x64.tar.gz \
+    | tar -xvz \
+    && sudo ln -s `pwd`/flyway-10.20.1/flyway /usr/local/bin \
+    && chmod a+x /usr/local/bin/flyway
