[schemaspy-postgis] SchemaSpyでenumのラベルも出すように設定

--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,4 @@ digital-signature/csharp/DigitalSignature/.vs/
 digital-signature/csharp/DigitalSignature/**/bin/
 digital-signature/csharp/DigitalSignature/**/obj/
 digital-signature/node/digital-signature/node_modules/
-schemaspy-postgis/schemaspy/output/
+schemaspy-postgis/schemaspy/output*/
